allow callback for events which are processed in a different host

When a capture happens in a different window tree host, injected
events can be processed by a different event dispatcher, but
InjectedEventHandler should call the callback when processing of
such events finishes.

This CL:
- removes |dispatcher|'s check in InjectedEventHandler
- allows InjectedEventHandler to check events globally instead of
  checking on a specific window tree host.

Bug: 910791
Test: the new test case covers
Change-Id: I8f039457e74d826b06a4b7d16e18aaa89d022c8e
Reviewed-on: https://chromium-review.googlesource.com/c/1361866
Commit-Queue: Jun Mukai <mukai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613795}
Former-commit-id: b30b08b3f1692010376f8beeb2d1b4416eb0b00e