ash/ws/window_service_delegate_impl.h
@@ -42,6 +42,7 @@ class WindowServiceDelegateImpl : public ws::WindowServiceDelegate {
                            ui::mojom::TextInputStatePtr state) override;
   void SetModalType(aura::Window* window, ui::ModalType type) override;
   ui::SystemInputInjector* GetSystemInputInjector() override;
+  ui::EventTarget* GetGlobalEventTarget() override;
   aura::Window* GetTopmostWindowAtPoint(const gfx::Point& location_in_screen,
                                         const std::set<aura::Window*>& ignores,
                                         aura::Window** real_topmost) override;
