ash/ws/window_service_delegate_impl_unittest.cc
@@ -5,10 +5,12 @@
 #include "ash/shell.h"
 #include "ash/test/ash_test_base.h"
 #include "ash/wm/toplevel_window_event_handler.h"
+#include "ash/ws/window_service_owner.h"
 #include "base/run_loop.h"
 #include "base/strings/string_number_conversions.h"
 #include "base/test/bind_test_util.h"
 #include "base/threading/thread_task_runner_handle.h"
+#include "services/ws/event_injector.h"
 #include "services/ws/test_window_tree_client.h"
 #include "services/ws/window_tree_test_helper.h"
 #include "ui/aura/client/drag_drop_client.h"
@@ -18,6 +20,7 @@
 #include "ui/display/display.h"
 #include "ui/display/screen.h"
 #include "ui/events/test/event_generator.h"
+#include "ui/events/test/test_event_handler.h"
 
 namespace ash {
 
@@ -415,6 +418,38 @@ TEST_F(WindowServiceDelegateImplTest, RemoveDisplay) {
       *GetWindowTreeClientChanges(),
       std::string("BoundsChanged window=0,1 old_bounds=* "
                   "new_bounds=100,100 104x100 local_surface_id=*")));
+}
+
+TEST_F(WindowServiceDelegateImplTest, MultiDisplayEventInjector) {
+  UpdateDisplay("500x400,500x400");
+  display::Display display1 = display::Screen::GetScreen()->GetPrimaryDisplay();
+
+  top_level_->SetCapture();
+
+  top_level_->SetBoundsInScreen(gfx::Rect(450, 0, 200, 200),
+                                GetSecondaryDisplay());
+  EXPECT_NE(Shell::GetPrimaryRootWindow(), top_level_->GetRootWindow());
+
+  ws::EventInjector injector(
+      Shell::Get()->window_service_owner()->window_service());
+  base::RunLoop run_loop;
+  ui::test::TestEventHandler handler;
+  top_level_->AddPreTargetHandler(&handler);
+  base::ThreadTaskRunnerHandle::Get()->PostTask(
+      FROM_HERE, base::BindLambdaForTesting([&]() {
+        auto ev = std::make_unique<ui::MouseEvent>(
+            ui::ET_MOUSE_DRAGGED, gfx::Point(470, 10), gfx::Point(470, 10),
+            base::TimeTicks::Now(), 0, 0);
+        static_cast<ws::mojom::EventInjector*>(&injector)->InjectEvent(
+            display1.id(), std::move(ev),
+            base::BindLambdaForTesting([&](bool result) {
+              EXPECT_TRUE(result);
+              run_loop.Quit();
+            }));
+      }));
+  run_loop.Run();
+  EXPECT_EQ(1, handler.num_mouse_events());
+  top_level_->RemovePreTargetHandler(&handler);
 }
 
 }  // namespace ash
